# rcshell

./: .gitignore  Cargo.toml
src/: audio.rs  bluetooth.rs  clients.rs  host.rs  ipc.rs  launcher.rs  logout.rs  main.rs  nix.rs  profile.rs  style.scss  systray.rs  time.rs  title.rs  volume.rs  watcher.rs  workspaces.rs
