[package]
name = "rcshell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
futures = "0.3.32"
gdk-pixbuf = "0.22.0"
gio = "0.22.6"
glib = "0.22.7"
grass = "0.13.4"
gtk4 = { version = "0.11.3" }
gtk4-layer-shell = "0.8.0"
phf = { version = "0.13.1", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
zbus = "5.15.0"
