[package]
name = "rcshell"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
chrono = "0.4.45"
futures = "0.3.33"
gdk-pixbuf = "0.22.0"
gio = "0.22.8"
glib = "0.22.8"
grass = "0.13.4"
gtk4 = { version = "0.11.4" }
gtk4-layer-shell = "0.8.0"
phf = { version = "0.14.0", features = ["macros"] }
tokio = { version = "1.53.1", features = ["full"] }
zbus = "5.18.0"
